# SimpleGo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVNOTES.md  Kconfig  LICENSE  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  idf_component.yml  main.c  partitions.csv  sdkconfig  sdkconfig.defaults
components/wolfssl__wolfssl/include/: user_settings.h
devices/t_deck_plus/hal_impl/: hal_display_t_deck_plus.c  tdeck_lvgl.c
devices/t_embed_cc1101/config/: device_config.h
docs/: ARCHITECTURE.md  BUGS.md  CRYPTO.md  DEVELOPMENT.md  DEVNOTES.md  DISCLAIMER.md  LEGAL.md  PROGRESS.md  PROTOCOL.md  SECURITY_MODEL.md  SPONSORS.md  TECHNICAL.md  TRADEMARK.md  WIRE_FORMAT.md
docs/hardware/: COMPONENT_SELECTION.md  HARDWARE_TIERS.md
docs/protocol-analysis/: 01_SIMPLEX_PROTOCOL_INDEX.md  02_SIMPLEX_STATUS.md  03_PART1_INTRO_SESSIONS_1-2.md  04_PART2_SESSIONS_3-4.md  05_PART3_SESSIONS_5-6.md  06_PART4_SESSION_7.md  07_PART5_SESSION_8_BREAKTHROUGH.md  08_PART6_SESSION_9.md  09_PART7_SESSION_10.md  BUG_TRACKER.md  QUICK_REFERENCE.md  README.md  SESSION_1_3_FOUNDATION.md  SESSION_4_WIRE_FORMAT.md  SESSION_5_X448_BREAKTHROUGH.md  SESSION_6_SMPQUEUEINFO.md  SESSION_7_DEEP_RESEARCH.md
docs/release-info/: v0.1.15-alpha.md
main/: CMakeLists.txt  lv_conf.h  main.c  smp_contacts.c  smp_handshake.c  smp_network.c  smp_parser.c  smp_peer.c  smp_queue.c  smp_ratchet.c  smp_utils.c  smp_x448.c
main/include/: smp_contacts.h  smp_crypto.h  smp_handshake.h  smp_parser.h  smp_peer.h  smp_queue.h  smp_ratchet.h  smp_types.h
main/ui/: ui_manager.c  ui_theme.c  ui_theme.h
main/ui/screens/: ui_chat.c  ui_chat.h  ui_connect.c  ui_connect.h  ui_contacts.c  ui_developer.c  ui_settings.c
mnt/user-data/outputs/SimpleGo/main/: CMakeLists.txt
ost/: README.md
src/arduino/crypto_test/: crypto_test.ino
src/arduino/simplex_dev_board/: simplex_dev_board.ino
src/crypto/: config.h  crypto.cpp  crypto.h
